# AELS_QGC

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  CodingStyle.qml  Flydynamics2uidesigner.qmlproject  Flydynamics2uidesigner.qrc  Grid.qml  QGCCommon.pri  QGCExternalLibs.pri  QGCPostLinkInstaller.pri  README.md  android.pri  circle.off  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.pro  qgroundcontrol.qrc  qmlmodules
.github/: pull_request_template.md
.github/workflows/: android_64_release.yml  android_release.yml  windows_release.yml
android/: AndroidManifest.xml  android_release.keystore
content/: AlesPalette.qml  App.qml  BigButton.qml  BigButtonForm.ui.qml  CMakeLists.txt  ImageButton.qml  ImageButtonForm.ui.qml  MissionSelection.qml  MissionSelectionForm.ui.qml  POI.qml  POIForm.ui.qml  ScreenLogin.qml  ScreenLoginForm.ui.qml
custom/: CustomCameraControl.qml  CustomFlyViewVideo.qml  CustomFlyViewWidgetLayer.qml  CustomGPSIndicator.qml  FlyViewVideoSiYiController.qml  custom.pri  custom.qrc  qgcresources.exclusion  qgcresources.qrc  qgroundcontrol.exclusion  qgroundcontrol.qrc  qgroundcontrol.qrc.bak
custom/TopOverlay/: AlesMissionSelection.qml  LoginScreen.qml
custom/res/: CustomFlyViewOverlay.qml  CustomMainToolBar.qml  CustomPreFlightCheckList.qml
custom/src/: Codev.SettingsGroup.json  Custom.SettingsGroup.json  CustomPlugin.cc  CustomPlugin.cc.bak  CustomPlugin.h  CustomQmlInterface.cc  CustomQmlInterface.h  CustomSettings.cc  CustomSettings.h  codevsettings.cpp  codevsettings.h  lockedqueue.h
imports/: CMakeLists.txt
libs/: CMakeLists.txt
libs/qtandroidserialport/: CMakeLists.txt
libs/qtandroidserialport/src/: qtandroidserialport.pri
src/: QGCApplication.cc  QGCApplication.h  QGCToolbox.h  import_qml_plugins.h  main.cc
src/Camera/: QGCCameraControl.h
src/HttpService/: CMakeLists.txt  HttpService.cpp  HttpService.h
src/LTE/: CMakeLists.txt  LTE.SettingsGroup.json  LTELinkIndicator.qml  LTEManager.cpp  LTEManager.cpp.bak  LTEManager.h  LTESettings.cpp  LTESettings.h  LTESettings.qml  lte.qrc
src/Repc/: CMakeLists.txt  DynamicRepcManager.cpp  DynamicRepcManager.h
src/TeamMode/: CMakeLists.txt  TeamModeIndicator.qml  TeamModeLink.cpp  TeamModeLink.h  TeamModeRouter.cpp  TeamModeRouter.h  teammode.qrc
translations/: qgc_source_ko_KR.ts
(+208 files in other folders)
